// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdatesNotification component should retrieve available updates when click the button 1`] = `
<div>
  <h2
    class="euiTitle euiTitle--medium"
  >
    APIs version
  </h2>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--small"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.228 2.942a.5.5 0 11-.538.842A5 5 0 1013 8a.5.5 0 111 0 6 6 0 11-2.772-5.058zM14 1.5v3A1.5 1.5 0 0112.5 6h-3a.5.5 0 010-1h3a.5.5 0 00.5-.5v-3a.5.5 0 111 0z"
            />
          </svg>
          <span
            class="euiButton__text"
          >
            Check updates
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem"
    >
      <dl
        class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
      >
        <dt
          class="euiDescriptionList__title"
        >
          Last check
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          2023-09-18T14:00:00.000Z
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div>
        Dismiss Notification Check component
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m"
  />
  <div>
    APIs Updates Table component
  </div>
  <div
    aria-live="polite"
    class="euiGlobalToastList euiGlobalToastList--right"
    role="region"
  />
</div>
`;

exports[`UpdatesNotification component should return the ApisUpdateStatus component 1`] = `
<div>
  <h2
    class="euiTitle euiTitle--medium"
  >
    APIs version
  </h2>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary euiButton--small"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="euiButton__text"
          >
            Check updates
          </span>
        </span>
      </button>
    </div>
    <div
      class="euiFlexItem"
    >
      <dl
        class="euiDescriptionList euiDescriptionList--row euiDescriptionList--compressed"
      >
        <dt
          class="euiDescriptionList__title"
        >
          Last check
        </dt>
        <dd
          class="euiDescriptionList__description"
        >
          2023-09-18T14:00:00.000Z
        </dd>
      </dl>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div>
        Dismiss Notification Check component
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m"
  />
  <div>
    APIs Updates Table component
  </div>
  <div
    aria-live="polite"
    class="euiGlobalToastList euiGlobalToastList--right"
    role="region"
  />
</div>
`;
